<resources>
    <string name="HDR_disable_continuous_shot">Enable HDR will disable Continuous Shot.</string>
    <string name="access_sd_fail">Couldn\'t access SD card.</string>
    <string name="accessibility_check_box">%1$s check box</string>
    <string name="accessibility_exit_best_mode_button">Exit best photo mode</string>
    <string name="accessibility_menu_button">Menu button</string>
    <string name="accessibility_mode_picker">Camera, video, or panorama selector</string>
    <string name="accessibility_review_cancel">Review cancel</string>
    <string name="accessibility_review_ok">Review done</string>
    <string name="accessibility_review_retake">Review retake</string>
    <string name="accessibility_shutter_button">Shutter</string>
    <string name="accessibility_switch_to_camera">Switch to photo</string>
    <string name="accessibility_switch_to_gcam">Switch to high quality</string>
    <string name="accessibility_switch_to_panorama">Switch to panorama</string>
    <string name="accessibility_switch_to_photo_sphere">Switch to Photo Sphere</string>
    <string name="accessibility_switch_to_video">Switch to video</string>
    <string name="advance_feature_enable_msg">Continuous shot is not supported when advance features are enabled</string>
    <string name="advanced_capture_disable_continuous_shot">Enable Advanced Capture will disable Continuous Shot.</string>
    <string name="all_in_focus">All in Focus</string>
    <string name="aperture">Aperture</string>
    <string name="app_name">Camera</string>
    <string name="auto">Auto</string>
    <string name="beauty_mode">Beauty</string>
    <string name="bestpicture_at_least_one_picture">At least, one picture has to be chosen.</string>
    <string name="bestpicture_done">SAVE</string>
    <string name="camera_disabled">Camera has been disabled because of security policies.</string>
    <string name="camera_error_title">Camera error</string>
    <string name="camera_gesture_title">Launch camera</string>
    <string name="camera_menu_more_label">MORE OPTIONS</string>
    <string name="camera_menu_settings_label">SETTINGS</string>
    <string name="camera_server_died">Media server died, closing camera.</string>
    <string name="camera_thermal_shutdown">Phone overheated, closing camera.</string>
    <string name="camera_unknown_error">Unknown error, closing camera.</string>
    <string name="cannot_connect_camera">Can\'t connect to the camera.</string>
    <string name="cannot_load_image">Cannot load the image!</string>
    <string name="capital_off">OFF</string>
    <string name="capital_on">ON</string>
    <string name="capturing">Capturing</string>
    <string name="clear_effects">Clear effects</string>
    <string name="clearsight_capture_fail">ClearSight capture failed</string>
    <string name="clearsight_capture_success">ClearSight capture successful</string>
    <string name="close">Close</string>
    <string name="count_down_title_text">Counting down to take a photo</string>
    <string name="create_tiny_planet">Create Tiny Planet</string>
    <string name="crop_action">Crop</string>
    <string name="crop_save">Save</string>
    <string name="crop_saved">Cropped image saved to %s.</string>
    <string name="delete">Delete</string>
    <string name="delete_all_best_dialog_content">Are you sure to delete all images?</string>
    <string name="delete_all_best_dialog_native_bt">Cancel</string>
    <string name="delete_all_best_dialog_positive_bt">Delete All</string>
    <string name="delete_all_best_dialog_title">Delete All ?</string>
    <string name="delete_best_dialog_content">Are you sure to delete all 10 pictures taken?</string>
    <string name="delete_best_dialog_native_bt">Cancel</string>
    <string name="delete_best_dialog_positive_bt">Delete</string>
    <string name="delete_best_dialog_title">Delete All ?</string>
    <string name="deleted">Deleted</string>
    <string name="description">Description</string>
    <string name="details">Details</string>
    <string name="details_hms">%1$d:%2$02d:%3$02d</string>
    <string name="details_ms">%1$02d:%2$02d</string>
    <string name="dialog_dismiss">Dismiss</string>
    <string name="dialog_do_not_show">Do not show again</string>
    <string name="dialog_ok">OK</string>
    <string name="disable_CDS_during_HighQualityNoiseReduction">High Quality Noise Reduction will disable CDS.</string>
    <string name="disable_CDS_during_SeeMore">SeeMore will disable CDS.</string>
    <string name="disable_NR_during_SeeMore">SeeMore will disable Noise Reduction.</string>
    <string name="disable_TNR_during_HighQualityNoiseReduction">High Quality Noise Reduction will disable TNR.</string>
    <string name="disable_TNR_during_SeeMore">SeeMore will disable TNR.</string>
    <string name="dual_camera_bokeh">Depth effect</string>
    <string name="dual_camera_wait_bokeh_image">Processing</string>
    <string name="duration">Duration</string>
    <string name="edit">Edit</string>
    <string name="effect_backdropper_gallery">Your video</string>
    <string name="effect_backdropper_space">In space</string>
    <string name="effect_backdropper_sunset">Sunset</string>
    <string name="effect_background">BACKGROUND</string>
    <string name="effect_goofy_face_big_eyes">Big eyes</string>
    <string name="effect_goofy_face_big_mouth">Big mouth</string>
    <string name="effect_goofy_face_big_nose">Big nose</string>
    <string name="effect_goofy_face_small_eyes">Small eyes</string>
    <string name="effect_goofy_face_small_mouth">Small mouth</string>
    <string name="effect_goofy_face_squeeze">Squeeze</string>
    <string name="effect_none">None</string>
    <string name="effect_silly_faces">SILLY FACES</string>
    <string name="err_app_unsupport_ae_bracket_code">no ae bracket support by Apps now</string>
    <string name="error_app_unsupported">Unsupported video resolution for this encoder type</string>
    <string name="error_app_unsupported_dis">Unsupported video resolution for Image Stabilization</string>
    <string name="error_app_unsupported_hfr">HFR is not supported for selected resolution</string>
    <string name="error_app_unsupported_hfr_codec">Only H264 video encoding is supported when HFR is ON</string>
    <string name="error_app_unsupported_hfr_selection">HFR/HSR is not supported for Image Stabilization/TimeLapse/HDR</string>
    <string name="error_app_unsupported_hsr">HSR is not supported for selected resolution</string>
    <string name="error_app_unsupported_profile">Unsupported video profile</string>
    <string name="error_app_unsupported_raw">Raw picture format is not supported in zsl mode, change to JPEG</string>
    <string name="error_permissions">The app does not have critical permissions needed to run. Please check your permissions settings.</string>
    <string name="exposure_time">Exposure time</string>
    <string name="file_size">File size</string>
    <string name="flash">Flash</string>
    <string name="flash_aebracket_message">Flash is not supported in AE-Bracket Mode</string>
    <string name="flash_off">No flash</string>
    <string name="flash_on">Flash fired</string>
    <string name="focal_length">Focal Length</string>
    <string name="hdr_enable_message">HDR is enabled, only Auto scene mode is supported</string>
    <string name="height">Height</string>
    <string name="help_menu_beautify_1">Enhance portraits</string>
    <string name="help_menu_beautify_2">with the</string>
    <string name="help_menu_beautify_3">Beautify feature</string>
    <string name="help_menu_bokeh_1">Enable</string>
    <string name="help_menu_bokeh_2">Realtime Bokeh</string>
    <string name="help_menu_bokeh_3">for background blur</string>
    <string name="help_menu_color_filter_1">Apply color</string>
    <string name="help_menu_color_filter_2">filters</string>
    <string name="help_menu_color_filter_3">to</string>
    <string name="help_menu_color_filter_4">improve pictures</string>
    <string name="help_menu_ok">OK</string>
    <string name="help_menu_scene_mode_1">Select a</string>
    <string name="help_menu_scene_mode_2">Scene Mode</string>
    <string name="mute_button_desc">Mute Button</string>
    <string name="pano_dialog_panorama_failed">Couldn\'t save panorama.</string>
    <string name="pano_dialog_prepare_preview">Preparing panorama</string>
    <string name="pano_dialog_title">Panorama</string>
    <string name="pref_camcorder_settings_category">Camcorder settings</string>
    <string name="pref_camera_audioencoder_default">aac</string>
    <string name="pref_camera_audioencoder_title">Audio Encoder</string>
    <string name="pref_camera_coloreffect_default">none</string>
    <string name="pref_camera_coloreffect_title">Color effect Level</string>
    <string name="pref_camera_dis_default">disable</string>
    <string name="pref_camera_dis_title">Image Stabilization</string>
    <string name="pref_camera_facedetection_default">off</string>
    <string name="pref_camera_facedetection_title">Face Detection</string>
    <string name="pref_camera_filter_mode_title">Color effect Mode</string>
    <string name="pref_camera_flashmode_title">Flash</string>
    <string name="pref_camera_hfr_default">off</string>
    <string name="pref_camera_hfr_title">Video High FrameRate</string>
    <string name="pref_camera_id_default">0</string>
    <string name="pref_camera_id_title">Choose camera</string>
    <string name="pref_camera_noise_reduction_default">high-quality</string>
    <string name="pref_camera_noise_reduction_title">Noise Reduction</string>
    <string name="pref_camera_picturesize_title">Picture size</string>
    <string name="pref_camera_powermode_default">Normal_Power</string>
    <string name="pref_camera_powermode_title">Power Mode</string>
    <string name="pref_camera_recordlocation_default">none</string>
    <string name="pref_camera_recordlocation_title">GPS location</string>
    <string name="pref_camera_savepath_default">0</string>
    <string name="pref_camera_savepath_title">Storage</string>
    <string name="pref_camera_see_more_default">off</string>
    <string name="pref_camera_see_more_title">See More</string>
    <string name="pref_camera_timer_sound_title">Beep during countdown</string>
    <string name="pref_camera_video_cds_default">off</string>
    <string name="pref_camera_video_cds_title">Video CDS mode</string>
    <string name="pref_camera_video_duration_default">10</string>
    <string name="pref_camera_video_duration_title">Video duration</string>
    <string name="pref_camera_video_flashmode_default">off</string>
    <string name="pref_camera_video_hdr_default">off</string>
    <string name="pref_camera_video_hdr_title">Video HDR</string>
    <string name="pref_camera_video_rotation_default">0</string>
    <string name="pref_camera_video_rotation_title">Video Rotation</string>
    <string name="pref_camera_video_tnr_default">on</string>
    <string name="pref_camera_video_tnr_title">Video TNR mode</string>
    <string name="pref_camera_videoencoder_default">h264</string>
    <string name="pref_camera_videoencoder_title">Video Encoder</string>
    <string name="pref_camera_videosnapsize_default">auto</string>
    <string name="pref_camera_whitebalance_default">auto</string>
    <string name="pref_camera_whitebalance_title">White balance</string>
    <string name="pref_camera_zoom_default">0</string>
    <string name="pref_camera_zoom_title">Zoom</string>
    <string name="pref_video_effect_default">none</string>
    <string name="pref_video_effect_title">Effects</string>
    <string name="pref_video_quality_title">Video quality</string>
    <string name="pref_video_time_lapse_frame_interval_default">0</string>
    <string name="pref_video_time_lapse_frame_interval_title">Time lapse</string>
    <string name="set_duration">Set duration in seconds</string>
    <string name="switch_photo_filmstrip">Filmstrip view</string>
    <string name="time_lapse_interval_set">Done</string>
</resources>