<?xml version="1.0" encoding="utf-8"?>
<com.android.camera.p004ui.CameraControls xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/camera_controls" android:layout_width="match_parent" android:layout_height="match_parent">
    <View android:layout_gravity="bottom" android:id="@+id/blocker" android:clickable="true" android:layout_width="match_parent" android:layout_height="@dimen/switcher_size"/>
    <include android:layout_gravity="bottom|right|center_vertical|center_horizontal|center" android:layout_width="64dp" android:layout_height="64dp" android:layout_marginRight="-8dp" android:layout_marginBottom="8dp" layout="@layout/menu_indicators"/>
    <com.android.camera.p004ui.RotateImageView android:id="@+id/menu" android:src="@drawable/ic_settings" android:contentDescription="@string/accessibility_menu_button" style="@style/MenuButton"/>
    <com.android.camera.p004ui.RotateImageView android:id="@+id/mute_button" android:src="@drawable/ic_unmuted_button" android:contentDescription="@string/mute_button_desc" style="@style/MenuButton"/>
    <com.android.camera.p004ui.ModuleSwitcher android:layout_gravity="bottom|left|center_vertical|center_horizontal|center" android:id="@+id/camera_switcher" android:layout_marginBottom="2dp" android:scaleType="center" android:contentDescription="@string/accessibility_mode_picker" style="@style/SwitcherButton"/>
    <com.android.camera.ShutterButton android:layout_gravity="bottom|center_vertical|center_horizontal|center" android:id="@+id/shutter_button" android:focusable="true" android:clickable="true" android:layout_width="@dimen/shutter_size" android:layout_height="@dimen/shutter_size" android:layout_marginBottom="@dimen/shutter_offset" android:src="@drawable/btn_new_shutter" android:scaleType="fitCenter" android:contentDescription="@string/accessibility_shutter_button"/>
    <ImageView android:layout_gravity="bottom|center_vertical|center_horizontal|center" android:id="@+id/video_button" android:focusable="true" android:visibility="invisible" android:clickable="true" android:layout_width="@dimen/shutter_size" android:layout_height="@dimen/shutter_size" android:layout_marginBottom="@dimen/shutter_offset" android:src="@drawable/btn_new_shutter_video" android:scaleType="fitCenter" android:contentDescription="@string/accessibility_shutter_button"/>
    <com.android.camera.p004ui.RotateImageView android:id="@+id/exit_panorama" android:src="@drawable/exit_panorama" style="@style/MenuButton"/>
    <com.android.camera.p004ui.RotateImageView android:layout_gravity="top|right|center_vertical|center_horizontal|center" android:id="@+id/preview_thumb" android:background="@android:color/transparent" android:layout_width="@dimen/capture_size" android:layout_height="@dimen/capture_size" android:scaleType="fitCenter" android:contentDescription="@string/switch_photo_filmstrip"/>
    <com.android.camera.p004ui.RotateImageView android:id="@+id/front_back_switcher" style="@style/ToggleButton"/>
    <com.android.camera.p004ui.RotateImageView android:id="@+id/hdr_switcher" style="@style/ToggleButton"/>
    <com.android.camera.p004ui.RotateImageView android:id="@+id/scene_mode_switcher" style="@style/ToggleButton"/>
    <com.android.camera.p004ui.RotateImageView android:id="@+id/filter_mode_switcher" style="@style/ToggleButton"/>
    <com.android.camera.p004ui.RotateImageView android:id="@+id/ts_makeup_switcher" style="@style/ToggleButton"/>
    <com.android.camera.p004ui.RotateImageView android:id="@+id/bokeh_switcher" style="@style/ToggleButton"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/remaining_photos" android:background="@android:color/transparent" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textColor="@android:color/white" android:id="@+id/remaining_photos_text" android:background="@android:color/transparent" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <ImageView android:id="@+id/remaining_photos_image" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/remaining_sheets"/>
    </LinearLayout>
</com.android.camera.p004ui.CameraControls>
